# cv-backend

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  TODO.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 27b21766a2f2_add_application_table.py  78d31e7951d7_initial_schema.py  97f205d16183_add_interview_table.py
app/: config.py  db.py  deps.py  errors.py  main.py  ratelimit.py  request_utils.py  seed.py
app/llm/: client.py  generate_prompt.py  prompts.py
app/models/: __init__.py  application.py  cv_variant.py  interview.py  link_hit.py  master_cv.py  project.py  short_link.py
app/routers/: admin.py  chat.py  cv.py  links.py  projects.py
app/schemas/: application.py  chat.py  common.py  cv.py  link.py  project.py
app/services/: cv_parser.py  links.py
nginx/: nginx.conf
nginx_ssl/: Dockerfile
nginx_ssl/conf/: nginx.conf  service_cv.conf
seed_data/: master_cv.md  projects.json
tests/: conftest.py  test_admin.py  test_chat.py  test_cv.py  test_cv_parser.py  test_links.py  test_models.py  test_projects.py  test_rag_behavior.py  test_request_utils.py  test_schemas.py
